--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,23 @@
-#root {}
+@font-face {
+  font-family: "Ubuntu";
+  src: url(./assets/fonts/Ubuntu-Regular.ttf) format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(./assets/fonts/Ubuntu-Bold.ttf) format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(./assets/fonts/Ubuntu-Medium.ttf) format("truetype");
+  font-weight: medium;
+  font-style: normal;
+}
+
+body { font-family:"Ubuntu", sans-serif; }
