--- a/src/components/PersonalInfoSection.css
+++ b/src/components/PersonalInfoSection.css
@@ -3,3 +3,21 @@
     display: flex;
     flex-direction: column;
 }
+
+.personal-info input {
+    margin-bottom: 24px;
+}
+
+.personal-info .navigation-button {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 90px;
+}
+
+.personal-info .navigation-button .back {
+    visibility: hidden;
+}
+
+.personal-info .navigation-button .next {
+    align-self: flex-end;
+}
