--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -6,15 +6,16 @@
 
 .section-header {
     width: 100%;
+    margin-bottom: 40px;
 }
 
-.section > h1 {
+.section-header > h1 {
     font-weight: 700;
     font-size: 32px;
     color: #022959;
 }
 
-.section > p {
+.section-header > p {
     font-weight: 400;
     font-size: 16px;
     color: #9699AA;
