--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+#root {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media (max-width: 500px) {
+  #root {
+    justify-content: space-between;
+    min-height: 800px;
+  }
+}
